# 3pull-app

./: .dockerignore  AGENTS.md  LICENSE  Makefile  README.md  tmp-cicd-implementation-steps.md
.github/workflows/: README.md  ci.yml
apps/api/: README.md  pyproject.toml
apps/api/app/core/settings/: config.py
apps/backend/: .env.example  .gitignore  README.md  pyproject.toml
apps/backend/app/: main.py
apps/backend/app/adapters/network/: __init__.py  tcp.py
apps/backend/app/adapters/postgres/: __init__.py  session.py
apps/backend/app/api/internal/: probes.py
apps/backend/app/api/v1/routers/: __init__.py  health.py  me.py  sample.py
apps/backend/app/api/v1/schemas/: __init__.py  auth.py  health.py  sample.py
apps/backend/app/core/lifecycle/: startup.py
apps/backend/app/core/logging/: config.py  middleware.py
apps/backend/app/core/security/: __init__.py  auth.py
apps/backend/app/core/settings/: __init__.py  config.py
apps/backend/app/services/: health.py  sample.py
apps/backend/test/: test_health_service.py
apps/frontend/: .env.example  .gitignore  .prettierignore  README.md  drizzle.config.ts  eslint.config.mjs  package.json  pnpm-lock.yaml  proxy.ts  tsconfig.json  vitest.config.ts
apps/web/: .env.example  README.md  next.config.ts  package.json  pnpm-lock.yaml  prisma.config.ts  proxy.ts
docker/: api.Dockerfile  web.Dockerfile
docs/: acr.md  agw.md  aks.md  api-protect.md  auth.md  fetch-strategy.md  firewall.md  form-validation.md  i18n.md  kv.md  maint-vm.md  network.md  pre-check.md  python.md  state.md  test-code.md  ui-design.md
docs/apps/: api-protect.md  fetch-strategy.md  form-validation.md  i18n.md  pre-check.md  state.md  test-code.md  ui-design.md
docs/infra/: acr.md  agw.md  aks.md  application-insights.md  cosmos-database.md  firewall.md  kv.md  log-analytics.md  maint-vm.md  network.md  postgres-database.md  redis.md  storage.md
infra/: .gitignore  README.md  common.parameter.json  main.sh
infra/01_monitor/: README.md  main.sh
(+223 files in other folders)
